# xtc

./: .gitignore  .gitlab-ci.yml  AbsImplementer.py  Implementer.py  JIRImplementer.py  JIROps.py  JIRScheduler.py  MMImplementer.py  Makefile  MlirImplementer.py  MmMlirImplementer.py  PerfectlyNestedImplementer.py  README.md  TVMImplementer.py  TVMOps.py  XdslImplementer.py  display-results.py  evaluator.py  explore.py  jir_requirements.txt  macos_mlir_requirements.txt  macos_tvm_requirements.txt  mlir_requirements.txt  pyproject.toml  requirements.txt  requirements_dev.txt  runtime.py  sdist_requirements.txt  setup_mlir_mm.py  setup_xdsl_mm.py  test-just-evaluate.py  test-mlir-generate.py  test-xdsl-compile.py  test-xdsl-evaluate.py  test-xdsl-generate.py  test.mlir  test.py  transform.py  tvm_requirements.txt  utils.py  (+1 more)
.github/workflows/: xtc-tests.yml
blueprints/: xdsl-sandbox.py
data/: mlir_results.mm06.csv  results.mm06-tile4dv-all.csv  results.mm06-tile4dv-mlir.csv  results.mm06-tile4dv-tvm.csv  results.mm06-tile4dv-xdsl.csv  results.mm06-tile7d-all.csv  tvm_results.mm06.csv
docs/develop/: optional_backends.md
docs/site/: Makefile  mkdocs.yml
docs/site/docs/: index.md  overview.md
docs/slides/: Makefile  cgo26_tuto_slides.md
docs/tutorials/: exec_utils.py  xtc_101.py
scripts/explore/: README.md  display-explore-variants.sh  run-explore-optimizers.sh  run-explore-variants.sh
scripts/filecheck/: gen_filecheck.py
scripts/licensing/: licensing.py
scripts/llms/: init_claude.py
scripts/pytest/: run_pytest.sh
src/: JIRImplementer.py  JIROps.py  JIRScheduler.py  MlirCompiler.py  MlirGraphImplementer.py  MlirImplementer.py  MlirModule.py  MlirNodeImplementer.py  TVMImplementer.py  TVMOps.py  explore.py  ext_tools.py  mlir_loop.py  runtime.c  utils.py  xdsl_aux.py
src/templates/tvm/: packed_op_wrapper.c.jinja
src/xtc/: explore.py
src/xtc/artifacts/: __init__.py  register_subgraph_operations.py  subgraph_sizes.py
src/xtc/cli/: explore.py  mlir_backend.py  mlir_loop.py  mlir_loop_legacy.py
src/xtc/itf/: __init__.py
src/xtc/schedules/: descript.py  exceptions.py  loop_nest.py  parsing.py
src/xtc/search/: optimizers.py  strategies.py
src/xtc/utils/: algorithms.py  cpu.py  ext_tools.py  host_tools.py  math.py  tools.py  xdsl_aux.py
tests/: demo-mlir-mm.py  dequant.py  setup_mlir_mm.py  test-just-compile.py  test-just-evaluate.py  test-mlir-generic-mm-evaluate-1.py  test-mlir-mm-compile.py  test-mlir-mm-evaluate-0.py  test-mlir-mm-evaluate-1.py  test-mlir-mm-evaluate-4.py  test-mlir-mm-generate-and-compile.py  test-mlir-mm-generate-and-evaluate.py
tests/filecheck/: gen_filecheck.py  lit.cfg
tests/filecheck/assembly-generation/: m2_matmul.mlir  m2_small_matmul.mlir  nehalem_matmul.mlir  omp_matmul.mlir  skylake_generic_matmul.mlir  skylake_matmul.mlir  tigerlake_matmul.mlir
tests/filecheck/backends/: test_conv2d_mini_mlir.py  test_conv2d_mini_tvm.py  test_conv2d_r181_mlir.py  test_conv2d_r181_mlir_sv.py  test_conv2d_r181_tvm.py  test_matmul_jir.py  test_matmul_mlir.py  test_matmul_mlir_distributed.py  test_matmul_ndiv_jir.py  test_matmul_ndiv_mlir.py  test_matmul_ndiv_tvm.py  test_matmul_pack_tvm.py  test_matmul_relu_mlir.py  test_matmul_relu_subset_mlir.py  test_matmul_relu_subset_tvm.py  test_matmul_relu_tvm.py  test_matmul_tvm.py  test_mlir_pack_no_sdist.py  test_mlir_pack_sdist.py  test_pad_constant_conv2d_mlir.py  test_pad_constant_conv2d_tvm.py  test_pad_conv2d_frsc_tvm.py  test_pad_conv2d_fused_tvm.py  test_pad_conv2d_mlir.py  test_pad_conv2d_tvm.py  test_pad_matmul_unpad_mlir.py  test_pad_matmul_unpad_tvm.py
tests/filecheck/evaluation/: avx2_conv2d_nhwc_hwcf_generic.mlir  avx2_matmul.mlir  avx2_named_matmul.mlir  avx2_parallel_matmul.mlir  avx512_matmul.mlir  test_matmul_pmu_counters.py  unopt_matmul.mlir  unroll_matmul.mlir
tests/filecheck/experimental/: linalg_split_dim_matmul.mlir
tests/filecheck/graphs/: test_conv_relu.py  test_matmul.py  test_matmul_relu.py  test_mlp.py  test_mlp_fc.py  test_relu.py  test_subgraphs.py
tests/filecheck/ir-generation/: linalg_2levels_matmul.mlir  linalg_matmul.mlir
tests/filecheck/limitations/: vecto_linalg_conv2d_nhwc_hwcf_generic.mlir
tests/filecheck/schedules/: test_descript_parsing_errors.py  test_descript_pretty_print.py  test_descript_slice_bigger.py  test_descript_slice_smaller.py  test_get_descript.py  test_matmul_descript_jir.py  test_matmul_descript_mlir.py  test_matmul_descript_tvm.py
tests/filecheck/search/: test_conv_oo.py  test_conv_pprprp.py  test_conv_pprprpv.py  test_conv_pprprpvr.py  test_conv_pprprpvr_rnd.py  test_conv_ppwrprp.py  test_conv_ppwrprpv.py  test_conv_ppwrprpvr.py  test_conv_prp.py  test_conv_prp_rnd.py  test_matmul_goto.py  test_matmul_goto_r.py  test_matmul_oo.py  test_matmul_p1.py  test_matmul_p1v.py  test_matmul_pprprp.py  test_matmul_pprprpv.py  test_matmul_pprprpvr.py  test_matmul_pprprpvr_rnd.py  test_matmul_ppwrprp.py  test_matmul_ppwrprpv.py  test_matmul_ppwrprpvr.py  test_matmul_prp.py  test_matmul_prp_rnd.py  utils.py
tests/filecheck/transform-generation/: annotated_matmul.mlir  avx2_dequant_matmul.mlir  avx2_matmul.mlir  avx2_named_matmul.mlir  avx2_parallel_matmul.mlir  avx512_matmul.mlir  dim_1_matmul.mlir  dim_tile_1.mlir  linalg_2levels_matmul.mlir  linalg_conv2d_nhwc_hwcf_generic.mlir  linalg_dequant_matmul.mlir  linalg_generic_matmul.mlir  linalg_interchange_matmul.mlir  linalg_matmul.mlir  linalg_named_matmul.mlir  linalg_vectorize_matmul.mlir  outer_dim_tile_1.mlir  outer_tile_matmul.mlir  raw_matmul.mlir  unopt_matmul.mlir  unroll_matmul.mlir
tests/jir/: jir_utils.py
tests/mlir/: mlir_utils.py  test_mlir_impl.py
tests/pytest/jir/: test_jir_impl.py
tests/pytest/mlir/: test_mlir_impl.py
tests/pytest/ttile/: mickern_xtctvm_pinocchio_matmul_f32.csv  test_microkernel.py  test_sarcasm_cache_model.py  test_scheme_to_xtc.py  test_search_strat.py  ttile_utils.py
tests/pytest/tvm/: test_tvm_impl.py
tests/tvm/: test_tvm_impl.py  tvm_utils.py
tests/unit/itf/: test_abstract.py
tests/unit/runtimes/: test_ndarray.py
(+251 files in other folders)
