[project]
name = "xtc"
version = "0.2.dev1"
dependencies = ['jinja2', 'matplotlib', 'numpy', 'ordered-set', 'py-cpuinfo', 'tqdm', 'typing_extensions', 'pyyaml','lit','filecheck','xdsl~=0.26.0']
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "coverage>=7.8.0",
    "filecheck",
    "lit",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
    "mypy==1.15.0",
    "pytest",
    "pyright==1.1.399",
]

[tool.setuptools]
platforms = ["Linux"]
zip-safe = false

[tool.setuptools.package-data]
xtc = [
    "py.typed",
    "csrcs/**",
    "templates/**",
]

[project.scripts]
mlir-loop = "xtc.cli.mlir_loop:main"
mlir-loop-legacy = "xtc.cli.mlir_loop_legacy:main"
mlir-backend = "xtc.cli.mlir_backend:main"
loop-display = "xtc.cli.display_results:main"
loop-explore = "xtc.cli.explore:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.10"
include = ["src/xtc/itf", "src/xtc/backends", "src/xtc/graphs", "src/xtc/search"]
reportMissingParameterType = "error"
reportImplicitOverride = "error"
reportUninitializedInstanceVariable = "error"
reportPossiblyUnboundVariable = "error"
reportIncompatibleVariableOverride = "error"
reportIncompatibleMethodOverride = "error"
reportArgumentType = "error"
reportReturnType = "error"
reportAbstractUsage = "error"
# Those are too strict
#reportMissingTypeArgument = "error"
#reportUnusedImport = "error"

[tool.mypy]
python_version = "3.10"
packages = ["xtc.itf", "xtc.backends", "xtc.graphs", "xtc.search"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
parallel =  true
source = ["xtc"]

[tool.coverage.report]
skip_empty = true
exclude_also = [
  "pass",
  "\\.\\.\\.",
]
