[project]
name = "xtc"
version = "0.2.dev1"
dependencies = ['jinja2', 'matplotlib', 'numpy', 'ordered-set', 'py-cpuinfo', 'tqdm', 'typing_extensions', 'pyyaml','lit','filecheck','xdsl~=0.50.0']
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "coverage>=7.8.0",
    "filecheck",
    "lit",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
    "mypy==1.15.0",
    "pytest",
    "pytest-xdist",
    "pyright==1.1.403",
    "marimo==0.14.16",
]

[tool.setuptools]
platforms = ["Linux"]
zip-safe = false

[tool.setuptools.package-data]
xtc = [
    "py.typed",
    "csrcs/**",
    "templates/**",
]

[project.scripts]
mlir-loop = "xtc.cli.mlir_loop:main"
mlir-backend = "xtc.cli.mlir_backend:main"
loop-display = "xtc.cli.display_results:main"
loop-explore = "xtc.cli.explore:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.10"
include = ["src/xtc/itf", "src/xtc/backends", "src/xtc/graphs", "src/xtc/search", "src/xtc/runtimes", "docs/marimo"]
reportMissingParameterType = "error"
reportImplicitOverride = "error"
reportUninitializedInstanceVariable = "error"
reportPossiblyUnboundVariable = "error"
reportIncompatibleVariableOverride = "error"
reportIncompatibleMethodOverride = "error"
reportArgumentType = "error"
reportReturnType = "error"
reportAbstractUsage = "error"
reportUnusedExpression = false
reportUnusedImport = "error"
# Avoids error when modules are not installed (for instance tvm or jir)
reportMissingImports = false
# Those are too strict
#reportMissingTypeArgument = "error"

[tool.mypy]
python_version = "3.10"
packages = ["xtc.itf", "xtc.backends", "xtc.graphs", "xtc.search", "xtc.runtimes", "docs.marimo"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.run]
branch = true
parallel =  true
source = ["xtc"]

[tool.coverage.report]
skip_empty = true
exclude_also = [
  "pass",
  "\\.\\.\\.",
]
