[project]
name = "xtc"
version = "0.2.dev1"
license = { text = "BSD 3 Clause" }
authors = [{ name = "Hugo Pompougnac", email = "hugo.pompougnac@inria.fr" }]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ['jinja2', 'matplotlib', 'numpy', 'ordered-set', 'py-cpuinfo', 'tqdm', 'typing_extensions', 'pyyaml','scikit-learn','lit','filecheck','xdsl~=0.54.0']
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "coverage>=7.8.0",
    "filecheck",
    "lit",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
    "mypy==1.15.0",
    "pytest",
    "pytest-xdist",
    "pyright==1.1.407",
    "types-PyYAML",
    "marimo==0.14.16",
    "ruff==0.14.10",
]

[tool.setuptools]
platforms = ["Linux"]
zip-safe = false

[tool.setuptools.package-data]
xtc = [
    "py.typed",
    "csrcs/**",
    "templates/**",
]

[project.scripts]
mlir-loop = "xtc.cli.mlir_loop:main"
mlir-backend = "xtc.cli.mlir_backend:main"
loop-display = "xtc.cli.display_results:main"
loop-explore = "xtc.cli.explore:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.10"
include = ["src/xtc/itf", "src/xtc/backends", "src/xtc/graphs", "src/xtc/search", "src/xtc/runtimes", "docs/marimo"]
reportMissingParameterType = "error"
reportImplicitOverride = "error"
reportUninitializedInstanceVariable = "error"
reportPossiblyUnboundVariable = "error"
reportIncompatibleVariableOverride = "error"
reportIncompatibleMethodOverride = "error"
reportArgumentType = "error"
reportReturnType = "error"
reportAbstractUsage = "error"
reportUnusedExpression = false
reportUnusedImport = "error"
# Avoids error when modules are not installed (for instance tvm or jir)
reportMissingImports = false
# Those are too strict
#reportMissingTypeArgument = "error"

[tool.mypy]
python_version = "3.10"
packages = ["xtc.itf", "xtc.backends", "xtc.graphs", "xtc.search", "xtc.runtimes", "docs.marimo"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.run]
branch = true
parallel =  true
source = ["xtc"]

[tool.coverage.report]
skip_empty = true
exclude_also = [
  "pass",
  "\\.\\.\\.",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests/pytest"]

[tool.ruff]
target-version = "py310"
respect-gitignore = false
exclude = [
  ".venv",
  "venv",
  "build",
  "dist",
  "public",
  "docs",
  "tests",
]
line-length = 88
indent-width = 4
